--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
-    height: 60vh
+    height: 70vh;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
@@ -11,7 +11,7 @@
 
 
 body{
-    background-color: #B0C1D9;
+    background-color: #c3cfdf;
     display: flex;
     flex-direction: column;
 }
@@ -23,7 +23,7 @@ h1{
     text-align: center;
     padding: 40px;
     font-size: 36px;
-    text-shadow: 0px 0px 30px rgb(18, 202, 18) ;
+    text-shadow: 0px 0px 30px rgb(131, 177, 201) ;
 }
 
 
@@ -32,14 +32,15 @@ form{
     flex-direction: column;
     align-items: center;
     width: 70%;
-    height: 550px;
+    height: 600px;
     border: 1px solid black;
     padding-top: 40px;
-    padding-bottom: 40px;
+    padding-bottom: 50px;
     background-color: #0d0d0dd0;
     border-radius: 0px 20px;
-    margin-bottom: 10%;
+    margin-bottom: 40%;
     box-shadow: 0px 0px 20px black;
+    margin-top: 0px;
     
 }
 
@@ -60,12 +61,14 @@ main{
     background-color: #3B4B59;
     margin: 20px;
     width: 80%;
-    height: 2280px;
+    height: 2300px;
+    padding: 10px;
     color: aliceblue;
 }
 #enviar{
     width: 30%;
     margin-bottom: 40px;
+    padding: 10px;
 }
 #enviar:hover{
     text-decoration: underline;
@@ -77,6 +80,22 @@ p{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
 }
+#aviso{
+    padding: 40px;
+    text-align: center;
+}
+
+footer{
+    background-color: black;
+    color: white;
+    text-align: center;
+    height: 300px;
+    margin: 40px 0px;
+    font-size: 20px;
+    padding: 15px;
+    font-family: Arial, Helvetica, sans-serif
+}
+
 
 
 
